WebCore: We should not bubble up events if we drag something to an iframe that has an invalid source. https://bugs.webkit.org/show_bug.cgi?id=30469

Reviewed by Dmitri Titov.

Test: http/tests/misc/bubble-drag-events.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleDragAndDropForTarget):
(WebCore::EventHandler::updateDragAndDrop):
(WebCore::EventHandler::cancelDragAndDrop):
(WebCore::EventHandler::performDragAndDrop):
* page/EventHandler.h:
(WebCore::EventHandler::):

LayoutTests: Tests the drag event bubbling on different targets:
- iframe with invalid source
- iframe with valid source
- non-iframe droppable element
https://bugs.webkit.org/show_bug.cgi?id=30469

Reviewed by Dmitri Titov.

* http/tests/misc/bubble-drag-events-expected.txt: Added.
* http/tests/misc/bubble-drag-events.html: Added.

Canonical link: https://commits.webkit.org/41996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50566 268f45cc-cd09-0410-ab3c-d52691b4dbfc